--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
           aws-region: ap-south-1
 
       - name: Upload to S3
-        run: aws s3 cp dist/ "s3://${S3_BUCKET_NAME}/ --recursive
+        run: aws s3 cp dist/ "s3://${S3_BUCKET_NAME}/" --recursive
 
       - name: Invalidate Cloudfront
         run: aws cloudfont-create-invalidation --distribution_id $CLOUDFRONT_DIS_ID --path "/index.html
