--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-oauth/google": "^0.13.4",
     "axios": "^1.13.2",
     "dompurify": "^3.3.1",
+    "dotenv": "^17.2.3",
     "nodemailer": "^7.0.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
